--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.5.0",
     "next": "13.2.4",
